# coding-test-clion

./: BJ_1009.cpp  BJ_1032.cpp  BJ_1214.cpp  BJ_13410.cpp  BJ_13460.cpp  BJ_14502.cpp  BJ_14686.cpp  BJ_14865.cpp  BJ_14939.cpp  BJ_17081.cpp  BJ_19541.cpp  BJ_19541_forTest.cpp  BJ_20057.cpp  BJ_20058.cpp  BJ_23289.cpp  BJ_2504.cpp  BJ_2873.cpp  BJ_3025.cpp  BJ_3025_new.cpp  BJ_3025_test.cpp  BJ_3111.cpp  BJ_4673.cpp  BJ_5373.cpp  CMakeLists.txt  NX_prev_01.cpp  PCCP_1_1.cpp  PCCP_1_2.cpp  algo_segment_tree.cpp
input_data/: 19541.txt  2504.txt
