cmake_minimum_required(VERSION 3.25)
project(codingTestCLion)

set(CMAKE_CXX_STANDARD 17)


add_executable(BJ_1009 BJ_1009.cpp)
add_executable(BJ_1032 BJ_1032.cpp)
add_executable(BJ_4673 BJ_4673.cpp)
add_executable(BJ_2504 BJ_2504.cpp)
add_executable(BJ_14502 BJ_14502.cpp)
add_executable(BJ_14686 BJ_14686.cpp)
add_executable(BJ_5373 BJ_5373.cpp)
add_executable(BJ_2873 BJ_2873.cpp)
add_executable(BJ_23289 BJ_23289.cpp)
add_executable(BJ_3111 BJ_3111.cpp)