cmake_minimum_required(VERSION 3.25)
project(codingTestCLion)

set(CMAKE_CXX_STANDARD 17)


add_executable(BJ_1009 BJ_1009.cpp)
add_executable(BJ_1032 BJ_1032.cpp)
add_executable(BJ_4673 BJ_4673.cpp)
add_executable(BJ_2504 BJ_2504.cpp)
add_executable(BJ_14502 BJ_14502.cpp)
add_executable(BJ_14686 BJ_14686.cpp)
add_executable(BJ_5373 BJ_5373.cpp)
add_executable(BJ_2873 BJ_2873.cpp)
add_executable(BJ_23289 BJ_23289.cpp)
add_executable(BJ_3111 BJ_3111.cpp)
add_executable(BJ_14865 BJ_14865.cpp)
add_executable(BJ_17081 BJ_17081.cpp)
add_executable(BJ_19541 BJ_19541.cpp)
add_executable(BJ_19541_forTest BJ_19541_forTest.cpp)
add_executable(BJ_3025 BJ_3025.cpp)
add_executable(BJ_3025_test BJ_3025_test.cpp)
add_executable(BJ_3025_new BJ_3025_new.cpp)
add_executable(BJ_14939 BJ_14939.cpp)
add_executable(BJ_1214 BJ_1214.cpp)
add_executable(TOSS_01 TOSS_01.cpp)
add_executable(TOSS_02 TOSS_02.cpp)
add_executable(TOSS_03 TOSS_03.cpp)
add_executable(TOSS_04 TOSS_04.cpp)
add_executable(TOSS_05 TOSS_05.cpp)
add_executable(TOSS_06 TOSS_06.cpp)
add_executable(TOSS_07 TOSS_07.cpp)
add_executable(BJ_13410 BJ_13410.cpp)
add_executable(BJ_20057 BJ_20057.cpp)
add_executable(BJ_20058 BJ_20058.cpp)
add_executable(GZ_01 GZ_01.cpp)
add_executable(GZ_02 GZ_02.cpp)
add_executable(GZ_03 GZ_03.cpp)
add_executable(algo_segment_tree algo_segment_tree.cpp)